[profile.release]
panic = 'unwind'

[workspace]
members = [
    'node',
    'runtime',
    'pallets/oracle',
    'pallets/manual-timestamp',
    'pallets/portfolio',
    'pallets/financial',
    'integration-testing',
    'integration-testing/integration-testing-macro',
    'financial-primitives',
    'common',
]
