[package]
authors = ['equilibrium']
edition = '2018'
name = 'common'
version = '0.1.0'

[dependencies.frame-support]
git = "https://github.com/paritytech/polkadot-sdk"
branch = "release-polkadot-v1.1.0"
default-features = false

[dependencies.scale-info]
version = "2.0.1"
default-features = false
features = ["derive"]

[dependencies.serde]
version = "1.0.101"
optional = true
features = ["derive"]

[dependencies.codec]
default-features = false
features = ["derive"]
package = "parity-scale-codec"
version = "3.0.0"

[dependencies.financial-primitives]
default-features = false
package = "financial-primitives"
path = "../financial-primitives"
version = "0.1.0"

[dependencies.sp-std]
default-features = false
git = "https://github.com/paritytech/polkadot-sdk"
branch = "release-polkadot-v1.1.0"

[features]
default = ['std']
std = [
    "serde",
    "frame-support/std",
    "codec/std",
    "financial-primitives/std",
    "sp-std/std",
]
