[package]
authors = ["equilibrium"]
description = "Financial primitives"
edition = "2018"
name = "financial-primitives"
version = "0.1.0"

[dependencies.frame-support]
default-features = false
git = "https://github.com/paritytech/substrate.git"
tag = "v2.0.0-rc6"
version = "2.0.0-rc6"

[dependencies.sp-std]
default-features = false
git = "https://github.com/paritytech/substrate.git"
tag = "v2.0.0-rc6"
version = "2.0.0-rc6"

[dependencies.codec]
default-features = false
features = ["derive"]
package = "parity-scale-codec"
version = "1.3.4"

[features]
default = ["std"]
std = [
    "frame-support/std",
    "sp-std/std",
    "codec/std",
]
