[package]
authors = ["equilibrium"]
description = "Financial primitives"
edition = "2018"
name = "financial-primitives"
version = "0.1.1"
license = "Apache-2.0"
repository = "https://github.com/equilibrium-eosdt/equilibrium-financial-pallet"

[dependencies.frame-support]
default-features = false
git = "https://github.com/paritytech/substrate.git"
tag = "v2.0.0-rc6"
version = "2.0.0-rc6"

[dependencies.sp-std]
default-features = false
git = "https://github.com/paritytech/substrate.git"
tag = "v2.0.0-rc6"
version = "2.0.0-rc6"

[dependencies.codec]
default-features = false
features = ["derive"]
package = "parity-scale-codec"
version = "1.3.4"

[dev-dependencies.chrono]
default-features = false
version = "0.4"

[features]
default = ["std"]
std = [
    "frame-support/std",
    "sp-std/std",
    "codec/std",
]
