[package]
authors = ['equilibrium']
edition = '2018'
name = 'integration-testing'
version = '0.1.0'

[dependencies]
arraystring = "0.3.0"
async-std = {version = "=1.6.2", features = ["attributes"]}
diff = "0.1.12"
futures = "0.3.5"
hex = "0.4.2"
hex-literal = "0.2.1"
jsonrpsee = {version = "0.1.0", features = ["ws"]}
lazy_static = "1.4.0"
log = "0.4.11"
rand = "0.7.3"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.55"
strum = "0.18.0"
substrate-subxt = {version = "0.12.0", git = "https://github.com/Veniamin/substrate-subxt", package = "substrate-subxt"}
substrate-subxt-proc-macro = {version = "0.12.0", git = "https://github.com/Veniamin/substrate-subxt", package = "substrate-subxt-proc-macro"}

[dependencies.codec]
default-features = false
features = ['derive', 'full']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc6'
version = '2.0.0-rc6'

[dependencies.sp-arithmetic]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc6'
version = '2.0.0-rc6'

[dependencies.sp-rpc]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc6'
version = '2.0.0-rc6'

[dependencies.sp-keyring]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc6'
version = '2.0.0-rc6'

[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc6'
version = '2.0.0-rc6'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc6'
version = '2.0.0-rc6'

# [dependencies.oracle]
# default-features = false
# package = "oracle"
# path = "../pallets/oracle"
# version = "0.1.0"

[dependencies.common]
default-features = false
package = "common"
path = "../common"
version = "0.1.0"

[dependencies.pallet-financial]
default-features = false
package = 'financial-pallet'
path = '../pallets/financial'
version = '0.1.0'

[dependencies.financial-primitives]
default-features = false
package = 'financial-primitives'
path = '../financial-primitives'
version = '0.1.0'

[dependencies.manual-timestamp]
default-features = false
package = 'manual-timestamp'
path = '../pallets/manual-timestamp'
version = '0.1.0'

[dependencies.integration-testing-macro]
default-features = false
package = "integration-testing-macro"
path = "integration-testing-macro"
version = "0.1.0"

[dependencies.pallet-transaction-payment-rpc-runtime-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc6'
version = '2.0.0-rc6'

[dependencies.substrate-fixed]
default-features = false
git = "https://github.com/encointer/substrate-fixed"
package = "substrate-fixed"

[dependencies.approx]
default-features = false
git = "https://github.com/brendanzab/approx"
version = "0.4.0"

[dependencies.itertools]
default-features = false
git = "https://github.com/rust-itertools/itertools"
version = "0.9.0"

[features]
default = ['std']
std = [
  'codec/std',
  'frame-support/std',
  'sp-arithmetic/std',
  'sp-core/std',
  # 'oracle/std',
  'common/std',
  'substrate-fixed/std',
  'pallet-financial/std',
  'financial-primitives/std',
  'manual-timestamp/std',
]
