[package]
authors = ['equilibrium']
build = 'build.rs'
description = 'Substrate node'
edition = '2018'
name = 'node-template'
version = '0.1.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[[bin]]
name = 'node-template'

[dependencies.node-template-runtime]
path = '../runtime'
version = '0.1.0'

[dependencies.pallet-transaction-payment-rpc]
git = 'https://github.com/paritytech/polkadot-sdk'
branch = 'release-polkadot-v1.5.0'

[dependencies.sc-basic-authorship]
git = 'https://github.com/paritytech/polkadot-sdk'
branch = 'release-polkadot-v1.5.0'

[dependencies.sc-cli]
features = ['wasmtime']
git = 'https://github.com/paritytech/polkadot-sdk'
branch = 'release-polkadot-v1.5.0'

[dependencies.sc-client-api]
git = 'https://github.com/paritytech/polkadot-sdk'
branch = 'release-polkadot-v1.5.0'

[dependencies.sc-consensus]
git = 'https://github.com/paritytech/polkadot-sdk'
branch = 'release-polkadot-v1.5.0'

[dependencies.sc-consensus-aura]
git = 'https://github.com/paritytech/polkadot-sdk'
branch = 'release-polkadot-v1.5.0'

[dependencies.sc-executor]
features = ['wasmtime']
git = 'https://github.com/paritytech/polkadot-sdk'
branch = 'release-polkadot-v1.5.0'

[dependencies.sc-finality-grandpa]
git = 'https://github.com/paritytech/polkadot-sdk'
branch = 'release-polkadot-v1.5.0'

[dependencies.sc-rpc]
git = 'https://github.com/paritytech/polkadot-sdk'
branch = 'release-polkadot-v1.5.0'

[dependencies.sc-rpc-api]
git = 'https://github.com/paritytech/polkadot-sdk'
branch = 'release-polkadot-v1.5.0'

[dependencies.sc-service]
features = ['wasmtime']
git = 'https://github.com/paritytech/polkadot-sdk'
branch = 'release-polkadot-v1.5.0'

[dependencies.sc-transaction-pool]
git = 'https://github.com/paritytech/polkadot-sdk'
branch = 'release-polkadot-v1.5.0'

[dependencies.sp-api]
git = 'https://github.com/paritytech/polkadot-sdk'
branch = 'release-polkadot-v1.5.0'

[dependencies.sp-block-builder]
git = 'https://github.com/paritytech/polkadot-sdk'
branch = 'release-polkadot-v1.5.0'

[dependencies.sp-blockchain]
git = 'https://github.com/paritytech/polkadot-sdk'
branch = 'release-polkadot-v1.5.0'

[dependencies.sp-consensus]
git = 'https://github.com/paritytech/polkadot-sdk'
branch = 'release-polkadot-v1.5.0'

[dependencies.sp-consensus-aura]
git = 'https://github.com/paritytech/polkadot-sdk'
branch = 'release-polkadot-v1.5.0'

[dependencies.sp-core]
git = 'https://github.com/paritytech/polkadot-sdk'
branch = 'release-polkadot-v1.5.0'

[dependencies.sp-finality-grandpa]
git = 'https://github.com/paritytech/polkadot-sdk'
branch = 'release-polkadot-v1.5.0'

[dependencies.sp-inherents]
git = 'https://github.com/paritytech/polkadot-sdk'
branch = 'release-polkadot-v1.5.0'

[dependencies.sp-runtime]
git = 'https://github.com/paritytech/polkadot-sdk'
branch = 'release-polkadot-v1.5.0'

[dependencies.sc-keystore]
git = 'https://github.com/paritytech/polkadot-sdk'
branch = 'release-polkadot-v1.5.0'

[dependencies.sp-transaction-pool]
git = 'https://github.com/paritytech/polkadot-sdk'
branch = 'release-polkadot-v1.5.0'

[dependencies.substrate-frame-rpc-system]
git = 'https://github.com/paritytech/polkadot-sdk'
branch = 'release-polkadot-v1.5.0'

[dependencies.common]
package = 'common'
path = '../common'
version = '0.1.0'

[dependencies.substrate-fixed]
git = "https://github.com/equilibrium-eosdt/substrate-fixed"
branch = "scale-info-2.0.1"
package = "substrate-fixed"

[dependencies.financial-primitives]
package = "financial-primitives"
path = "../financial-primitives"
version = "0.1.0"

# These dependencies are used for runtime benchmarking
[dependencies.frame-benchmarking]
git = 'https://github.com/paritytech/polkadot-sdk'
branch = 'release-polkadot-v1.5.0'

[dependencies.frame-benchmarking-cli]
git = 'https://github.com/paritytech/polkadot-sdk'
branch = 'release-polkadot-v1.5.0'


[dependencies]
jsonrpc-core = '15.1.0'
structopt = '0.3.8'

[build-dependencies.substrate-build-script-utils]
git = 'https://github.com/paritytech/polkadot-sdk'
branch = 'release-polkadot-v1.5.0'
