[package]
authors = ["equilibrium"]
description = "Financial pallet"
edition = "2018"
name = "financial-pallet"
version = "0.1.0"
license = "Apache-2.0"
repository = "https://github.com/equilibrium-eosdt/equilibrium-financial-pallet"
documentation = "https://docs.rs/financial-pallet"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies.serde]
version = "1.0.101"
optional = true
features = ["derive"]

[dependencies.codec]
default-features = false
features = ["derive"]
package = "parity-scale-codec"
version = "1.3.4"

[dependencies.frame-support]
default-features = false
git = "https://github.com/paritytech/substrate.git"
tag = "v2.0.0-rc6"
version = "2.0.0-rc6"

[dependencies.frame-system]
default-features = false
git = "https://github.com/paritytech/substrate.git"
tag = "v2.0.0-rc6"
version = "2.0.0-rc6"

[dependencies.sp-runtime]
default-features = false
git = "https://github.com/paritytech/substrate.git"
tag = "v2.0.0-rc6"
version = "2.0.0-rc6"

[dependencies.substrate-fixed]
default-features = false
git = "https://github.com/encointer/substrate-fixed"
package = "substrate-fixed"
version = "0.5.4"

[dependencies.sp-std]
default-features = false
git = "https://github.com/paritytech/substrate.git"
tag = "v2.0.0-rc6"
version = "2.0.0-rc6"

[dependencies.financial-primitives]
default-features = false
package = "financial-primitives"
path = "../../financial-primitives"
version = "0.1.0"

[dev-dependencies.sp-core]
default-features = false
git = "https://github.com/paritytech/substrate.git"
tag = "v2.0.0-rc6"
version = "2.0.0-rc6"

[dev-dependencies.sp-io]
default-features = false
git = "https://github.com/paritytech/substrate.git"
tag = "v2.0.0-rc6"
version = "2.0.0-rc6"

[dev-dependencies.chrono]
default-features = false
version = "0.4"

[dev-dependencies.approx]
default-features = false
version = "0.3.2"

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std",
    "substrate-fixed/std",
    "sp-std/std",
    "financial-primitives/std",
]
