[package]
authors = ['equilibrium']
description = 'UnixTime implementation for testing purposes'
edition = '2018'
name = 'manual-timestamp'
version = '0.1.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.scale-info]
version = "2.0.1"
default-features = false
features = ["derive"]

[dependencies.serde]
package = 'serde'
version = "1.0.101"
optional = true
features = ["derive"]

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '3.0.0'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch="polkadot-v0.9.42"

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch="polkadot-v0.9.42"

[dev-dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch="polkadot-v0.9.42"

[dev-dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch="polkadot-v0.9.42"

[dev-dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch="polkadot-v0.9.42"

[dev-dependencies.common]
default-features = false
package = 'common'
path = '../../common'
version = '0.1.0'

[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    'frame-support/std',
    'frame-system/std',
]
