[package]
authors = ['equilibrium']
description = 'Portfolio pallet for testing purposes'
edition = '2018'
name = 'portfolio'
version = '0.1.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.scale-info]
version = "2.0.1"
default-features = false
features = ["derive"]

[dependencies.serde]
package = 'serde'
version = "1.0.101"
optional = true
features = ["derive"]

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '3.0.0'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.42"

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.42"

[dependencies.financial-primitives]
default-features = false
package = 'financial-primitives'
path = '../../financial-primitives'
version = '0.1.0'

[dependencies.substrate-fixed]
default-features = false
git = "https://github.com/equilibrium-eosdt/substrate-fixed"
branch = "scale-info-2.0.1"
package = "substrate-fixed"

[dev-dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.42"

[dev-dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.42"

[dev-dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch="polkadot-v0.9.42"

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch="polkadot-v0.9.42"

[dev-dependencies.common]
default-features = false
package = 'common'
path = '../../common'
version = '0.1.0'

[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'financial-primitives/std',
    'substrate-fixed/std',
    'substrate-fixed/serde',
]
